# sample_projectweb_interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  web_builder.py
components/Esp32_WebInterface/: CMakeLists.txt  Esp32_WebInterface.c  Esp32_WebInterface.h  Esp32_WebInterface_HA.c  Esp32_WebInterface_dns.c  Esp32_WebInterface_eeprom_func.c  Esp32_WebInterface_interfacciamento.c  Esp32_WebInterface_oggetti_func.c  Esp32_WebInterface_server_func.c  Esp32_WebInterface_wifi.c  idf_component.yml  index_html.h
components/Esp32_WebInterface/web_src/: index.html  script.js  style.css
main/: CMakeLists.txt  main.c
